2010-11-09  Andy Grunwald  <andreas.grunwald@wmdb.de>

	* Fixed bug #3161: GET vars should be urldecoded before inserted in field
	* Fixed bug #1090: form.HTMLentities - no double &amp; in formaction
	* Fixed bug #6336: powermail checkboxes and date2cal
	* Fixed bug #10456: SQL-Error occur, if enter a not valid date in backend module date fields
	* Raised version from 1.5.5 to 1.5.6-dev
	* Applied security fixes. For more information look at Security Bulletin TYPO3-SA-2010-021

2010-11-02  Andy Grunwald  <andreas.grunwald@wmdb.de>

	* Fixed bug #10228: markers are not substituted in subject of Database entry
	* Fixed bug #6692: Form with "Activate confirmation page" and "ResponseText (shown on website)" fails on TYPO3 4.3

2010-10-28  Andy Grunwald  <andreas.grunwald@wmdb.de>

	* Fixed bug #10504: No "Access"-Field for backend groups in TYPO3 V. 4.4

2010-10-25  Andy Grunwald  <andreas.grunwald@wmdb.de>

	* Task #10440: Remove tx_powermail_html::dontAllow()-Calls

2010-10-21  Andy Grunwald  <andreas.grunwald@wmdb.de>

	* Fixed bug #9489: powermailJS page type 3131 get indexed by index_search
	* Fixed bug #7707: wrong code in documentation
	* Fixed bug #7852: UID is not set when saved in DB (with db_entry)
	* Fixed bug #9887: [userFunc=user_powermailOnCurrentPage] breaks some extensions
	* Fixed bug #5527: Mandatory Field with Value 0 is not accepted
	* Fixed bug #8843: user_powermailOnCurrentPage failed on insert records
	* Fixed bug #7806: Back button is not working

2010-10-16  Andy Grunwald  <andreas.grunwald@wmdb.de>

	* Fixed bug #8045: Hook PM_FieldMarkerArrayHook not working
	* Fixed bug #8905: CSS Class "validate-one-required" is added to every radio button
	* Fixed bug #10297: TCA-Field "tx_powermail_subject_r" is not required, but will be checked in pi1
	* Fixed bug #9043: Missing class in frontend editing
	* Fixed bug #9965: It's not possible to add two class names to a field / fieldset

2010-09-22  Andy Grunwald  <andreas.grunwald@wmdb.de>
